{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 67,
  "lineage": "48081005-175e-7af5-c115-e38278e8a9ec",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "stock_news_analyzer_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291336071475:internet-gateway/igw-0328cc5e218c0e938",
            "id": "igw-0328cc5e218c0e938",
            "owner_id": "291336071475",
            "region": "us-east-1",
            "tags": {
              "Name": "Stock News Analyzer Internet Gateway"
            },
            "tags_all": {
              "Name": "Stock News Analyzer Internet Gateway"
            },
            "vpc_id": "vpc-04a763bbaef584bc0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.stock_news_analyzer_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291336071475:route-table/rtb-0a5005ddd4193394f",
            "id": "rtb-0a5005ddd4193394f",
            "owner_id": "291336071475",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0328cc5e218c0e938",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Stock News Analyzer Public Route Table"
            },
            "tags_all": {
              "Name": "Stock News Analyzer Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a763bbaef584bc0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "291336071475",
            "id": "rtb-0a5005ddd4193394f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.stock_news_analyzer_igw",
            "aws_vpc.stock_news_analyzer_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0601405719c2e02ef",
            "region": "us-east-1",
            "route_table_id": "rtb-0a5005ddd4193394f",
            "subnet_id": "subnet-0dbf1a7e61ed2328f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.stock_news_analyzer_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.stock_news_analyzer_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291336071475:security-group/sg-0d6cee8a2c34c90c9",
            "description": "Security group for Stock News Analyzer RDS instance",
            "egress": [],
            "id": "sg-0d6cee8a2c34c90c9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "stock_news_analyzer_rds_sg",
            "name_prefix": "",
            "owner_id": "291336071475",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04a763bbaef584bc0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "291336071475",
            "id": "sg-0d6cee8a2c34c90c9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.stock_news_analyzer_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291336071475:subnet/subnet-0ceee28a1a1c52de9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ceee28a1a1c52de9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291336071475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Stock News Analyzer Private Subnet"
            },
            "tags_all": {
              "Name": "Stock News Analyzer Private Subnet"
            },
            "vpc_id": "vpc-04a763bbaef584bc0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "291336071475",
            "id": "subnet-0ceee28a1a1c52de9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.stock_news_analyzer_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291336071475:subnet/subnet-0dbf1a7e61ed2328f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbf1a7e61ed2328f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "291336071475",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Stock News Analyzer Public Subnet"
            },
            "tags_all": {
              "Name": "Stock News Analyzer Public Subnet"
            },
            "vpc_id": "vpc-04a763bbaef584bc0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "291336071475",
            "id": "subnet-0dbf1a7e61ed2328f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.stock_news_analyzer_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "stock_news_analyzer_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:291336071475:vpc/vpc-04a763bbaef584bc0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a2aa299b9c73507b",
            "default_route_table_id": "rtb-091918ab2601d707f",
            "default_security_group_id": "sg-034e9042d78eec603",
            "dhcp_options_id": "dopt-0e42f0ec867ee2c49",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04a763bbaef584bc0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-091918ab2601d707f",
            "owner_id": "291336071475",
            "region": "us-east-1",
            "tags": {
              "Name": "Stock News Analyzer VPC"
            },
            "tags_all": {
              "Name": "Stock News Analyzer VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "291336071475",
            "id": "vpc-04a763bbaef584bc0",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}